--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "@sendgrid/mail": "^8.1.0",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "qs": "^6.11.2"
   }
 }
