--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "build": "node app.js"
+    "build": "node app.js",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
