--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "19.6.0",
+    "node": "18.x",
     "npm": "9.7.1"
   },
   "scripts": {
