--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
