--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "streamifier": "^0.1.1"
   }
 }
